@@ -48,6 +48,12 @@ android {
         buildConfig = true
     }
 
+    testOptions {
+        unitTests.isIncludeAndroidResources = true
+
+        unitTests.all { it.jvmArgs("--add-exports=java.base/jdk.internal.access=ALL-UNNAMED") }
+    }
+
     @Suppress("UnstableApiUsage")
     testFixtures {
         enable = true
@@ -108,6 +114,9 @@ dependencies {
     androidTestImplementation(libs.androidx.espresso.core)
     androidTestImplementation(libs.androidx.junit)
 
+    testImplementation(platform(libs.androidx.compose.bom))
+    testImplementation(libs.androidx.compose.ui.test.junit4)
+    testImplementation(libs.androidx.espresso.core)
     testImplementation(libs.androidx.junit)
     testImplementation(libs.androidx.paging.testing)
     testImplementation(libs.junit)
